# PedSim

./: Cargo.toml  LICENSE  _LOG.txt
assets/: street_test.tiff.aux.xml
src/: main.rs
src/model/: calc_utils.rs  mod.rs  object.rs  pedestrian.rs  sea.rs  state.rs  state_components.rs
src/model/calc_utils/: mod.rs  navigation_distance.rs  navigation_point.rs  pathfinding.rs  utility_types.rs
src/model/state/: components.rs  state.rs
src/system_interface/: mod.rs  object_grid_loader.rs
src/visualization/: crab_vis.rs  mod.rs  model_vis.rs  obj_vis.rs  ped_vis.rs  sea_vis.rs
