[package]
name = "pedestrian_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
enumx = "0.4.3"
krabmaga = "0.4.*"
ndarray = "0.15.6"
num-traits = "0.2.17"

[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
